@@ -1,5 +1,9 @@
 2007-01-02  Danilo Šegan  <danilo@gnome.org>
 
+	* gnome-modules.xml.in: Add beagle and bashee specific layouts.
+
+2007-01-02  Danilo Šegan  <danilo@gnome.org>
+
 	* gnome-modules.xml.in: string-freeze gnome-2-16 and gnome-2-14.
 
 2007-01-02  Danilo Šegan  <danilo@gnome.org>
